setting project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,22 +304,23 @@
 
 <h1>{{ title }}</h1>
 
-<nav>
-  <a routerLink="/article-details">Article Details</a>
-  <br />
-  <a routerLink="/app-article-list-item">Article list</a>
-  <br />
-  <a routerLink="/app-datetime-picker">Datetime picker</a>
-  <br />
-  <a routerLink="/app-filter-tree">Filter Tree</a>
-  <br />
-  <a routerLink="/app-search">Search</a>
-  <br />
-  <a routerLink="/app-user-details">User Details</a>
-  <br />
-  <a routerLink="/app-login-form">Login form</a>
-</nav>
-<router-outlet></router-outlet>
+<!--<nav>-->
+<!--  <a routerLink="/article-details">Article Details</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-article-list-item">Article list</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-datetime-picker">Datetime picker</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-filter-tree">Filter Tree</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-search">Search</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-user-details">User Details</a>-->
+<!--  <br />-->
+<!--  <a routerLink="/app-login-form">Login form</a>-->
+<!--</nav>-->
+<!--<router-outlet></router-outlet>-->
+<app-home></app-home>
 
 <!--<app-article-details></app-article-details>-->
 <!--<app-article-list></app-article-list>-->
