setting project structure

--- a/src/app/model/home/home.component.html
+++ b/src/app/model/home/home.component.html
@@ -1,11 +1,10 @@
 <mat-toolbar class="toolbar-spacer">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button mat-icon-button class="toolbar-icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span class="toolbar-spacer"></span>
   <span class="toolbar-title">My App</span>
   <span class="toolbar-spacer"></span>
-
 </mat-toolbar>
 
 <nav>
