--- a/src/app/model/home/home.component.html
+++ b/src/app/model/home/home.component.html
@@ -1,27 +1,17 @@
 <mat-toolbar class="toolbar-spacer">
-  <button mat-icon-button class="toolbar-icon">
+  <button mat-icon-button [matMenuTriggerFor]="menu" class="toolbar-icon">
     <mat-icon>menu</mat-icon>
+    <mat-menu class="toolbar-menu" #menu="matMenu">
+      <button mat-menu-item routerLink="/article-details">Article Details</button>
+      <button mat-menu-item routerLink="/app-article-list-item">Article list</button>
+      <button mat-menu-item routerLink="/app-datetime-picker">Datetime picker</button>
+      <button mat-menu-item routerLink="/app-filter-tree">Filter Tree</button>
+      <button mat-menu-item routerLink="/app-search">Search</button>
+    </mat-menu>
   </button>
   <span class="toolbar-spacer"></span>
   <span class="toolbar-title">My App</span>
   <span class="toolbar-spacer"></span>
 </mat-toolbar>
-
-<nav>
-  <a routerLink="/article-details">Article Details</a>
-  <br />
-  <a routerLink="/app-article-list-item">Article list</a>
-  <br />
-  <a routerLink="/app-datetime-picker">Datetime picker</a>
-  <br />
-  <a routerLink="/app-filter-tree">Filter Tree</a>
-  <br />
-  <a routerLink="/app-search">Search</a>
-  <br />
-  <a routerLink="/app-user-details">User Details</a>
-  <br />
-  <a routerLink="/app-login-form">Login form</a>
-
-</nav>
 
 <router-outlet></router-outlet>
