setting project structure

--- a/src/app/model/home/home.component.html
+++ b/src/app/model/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar-spacer">
-  <button mat-icon-button [matMenuTriggerFor]="menu" class="toolbar-icon">
+  <button mat-icon-button mat-raised-button [matMenuTriggerFor]="menu" class="toolbar-icon">
     <mat-icon>menu</mat-icon>
     <mat-menu class="toolbar-menu" #menu="matMenu">
       <button mat-menu-item routerLink="/article-details">Article Details</button>
