--- a/src/app/model/home/home.component.html
+++ b/src/app/model/home/home.component.html
@@ -10,7 +10,7 @@
     </mat-menu>
   </button>
   <span class="toolbar-spacer"></span>
-  <span class="toolbar-title">My App</span>
+  <span class="toolbar-title">{{ homeTitle }}</span>
   <span class="toolbar-spacer"></span>
 </mat-toolbar>
 
