building home page and pages to show components

--- a/src/app/model/article-details/article-details.component.html
+++ b/src/app/model/article-details/article-details.component.html
@@ -1,6 +1,6 @@
-<p>article-details works!</p>
+
 <mat-list>
-  <mat-list-item> Pepper </mat-list-item>
-  <mat-list-item> Salt </mat-list-item>
-  <mat-list-item> Paprika </mat-list-item>
+  <mat-list-item> A..... </mat-list-item>
+  <mat-list-item> B....... </mat-list-item>
+  <mat-list-item> C....... </mat-list-item>
 </mat-list>
