--- a/src/app/model/article-details/article-details.component.html
+++ b/src/app/model/article-details/article-details.component.html
@@ -1,6 +1,6 @@
-
+<p>Article Details works!</p>
 <mat-list>
-  <mat-list-item> A..... </mat-list-item>
+  <mat-list-item> A....... </mat-list-item>
   <mat-list-item> B....... </mat-list-item>
   <mat-list-item> C....... </mat-list-item>
 </mat-list>
