creating article interface, article list with angularMaterial,

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
     <mat-menu class="toolbar-menu" #menu="matMenu">
       <button class="toolbar-menu-button" mat-menu-item routerLink="/article-details">Article Details</button>
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-article-list-item">Article list</button>
+      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-article-list">Article list</button>
       <button class="toolbar-menu-button" mat-menu-item routerLink="/app-datetime-picker">Datetime picker</button>
       <button class="toolbar-menu-button" mat-menu-item routerLink="/app-filter-tree">Filter Tree</button>
       <button class="toolbar-menu-button" mat-menu-item routerLink="/app-search">Search</button>
