--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,1 +1,21 @@
-<p>article-list works!</p>
+<!--<div class="container mt-5">-->
+<!--  <h1>Article List</h1>-->
+<!--  <div class="list-group">-->
+<!--    <a class="list-group-item list-group-item-action" *ngFor="let a of articles" [routerLink]="['./article-details', a.id]">{{a.name}}</a>-->
+<!--  </div>-->
+<!--</div>-->
+<mat-list>
+  <h3>{{article.articleTitle}} Details</h3>
+  <mat-list-item><span>Uuid: </span> {{article.articleUuid}}</mat-list-item>
+  <mat-list-item>Title: <span></span> {{article.articleTitle}}</mat-list-item>
+  <mat-list-item><span>Date: </span>{{article.articleDate}}</mat-list-item>
+  <mat-list-item><span>Topic: </span>{{article.articleTopic}}</mat-list-item>
+  <mat-list-item><span>Media Type: </span>{{article.articleMediaType}}</mat-list-item>
+  <mat-list-item><span>Sub Media: </span>{{article.articleSubMedia}}</mat-list-item>
+  <mat-list-item><span>Country: </span>{{article.articleCountry}}</mat-list-item>
+  <mat-list-item><span>Media: </span>{{article.articleMedia}}</mat-list-item>
+  <mat-list-item><span>Rubric: </span>{{article.articleRubric}}</mat-list-item>
+  <mat-list-item><span>Author: </span>{{article.articleAuthor}}</mat-list-item>
+  <mat-list-item><span>Sentiment: </span>{{article.articleSentiment}}</mat-list-item>
+  <mat-list-item><span>Genre: </span>{{article.articleGenre}}</mat-list-item>
+</mat-list>
