--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -9,5 +9,5 @@
   background-color: #e6ebf1;
 }
 body {
-  font-family: glyphicons-basic-regular !important;
+  font-family: glyphicons-basic-regular, serif !important;
 }
