--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,23 @@
-<mat-toolbar class="toolbar-spacer">
-  <button mat-icon-button mat-raised-button [matMenuTriggerFor]="menu" class="toolbar-icon">
-    <mat-icon>menu</mat-icon>
-    <mat-menu class="toolbar-menu" #menu="matMenu">
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/article-details">Article Details</button>
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-article-list">Article list</button>
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-datetime-picker">Datetime picker</button>
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-filter-tree">Filter Tree</button>
-      <button class="toolbar-menu-button" mat-menu-item routerLink="/app-search">Search</button>
-    </mat-menu>
-  </button>
-  <span class="toolbar-spacer"></span>
-  <span class="toolbar-title">{{ homeTitle }}</span>
-  <span class="toolbar-spacer"></span>
-</mat-toolbar>
+<header>
+  <mat-toolbar class="toolbar-spacer">
+    <button mat-icon-button mat-raised-button [matMenuTriggerFor]="menu" class="toolbar-icon">
+      <mat-icon>menu</mat-icon>
+      <mat-menu class="toolbar-menu" #menu="matMenu">
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/article-details">Article Details</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-article-list">Article list</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-datetime-picker">Datetime picker</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-filter-tree">Filter Tree</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-search">Search</button>
+      </mat-menu>
+    </button>
+    <span class="toolbar-spacer"></span>
+    <span class="toolbar-title">{{ homeTitle }}</span>
+    <span class="toolbar-spacer"></span>
+  </mat-toolbar>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
 
-<router-outlet></router-outlet>
+
+
