making side nav for article list, making mock articlesList

--- a/src/app/components/article-list/article-list.component.css
+++ b/src/app/components/article-list/article-list.component.css
@@ -6,3 +6,34 @@ span {
   font-weight: bold;
   font-family: glyphicons-basic-regular, serif !important;
 }
+
+
+.container {
+  position: absolute;
+  top: 60px;
+  bottom: 60px;
+  left: 0;
+  right: 0;
+}
+
+.sidenav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  background: #e6ebf1;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.example-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
