--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -1,1 +1,7 @@
 <p>filter-tree works!</p>
+<mat-action-list>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>Date filter</mat-expansion-panel-header>
+
+  </mat-expansion-panel>
+</mat-action-list>
