--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -1,9 +1,8 @@
-<section [formGroup]="filterCollection">
-  <h4>Select your toppings:</h4>
-  <p><mat-checkbox formControlName="media">Media</mat-checkbox></p>
-  <p><mat-checkbox formControlName="both">Both</mat-checkbox></p>
-  <p><mat-checkbox formControlName="engagement">Engagement</mat-checkbox></p>
-</section>
+<mat-radio-group labelPosition="before" [(ngModel)]="filterColl">
+  <mat-radio-button class="radio-button" *ngFor="let filterCollection of filterCollections" [value]="filterColl">
+    {{ filterColl }}
+  </mat-radio-button>
+</mat-radio-group>
 <mat-action-list>
   <mat-expansion-panel>
 
