changing project structure

--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,4 +1,4 @@
-<h3>Article list works!</h3>
+
 <mat-drawer-container class="container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side">
     <p>make tab 'Articles:'</p>
@@ -9,7 +9,7 @@
     </mat-card>
 
   </mat-drawer>
-
+  <h3>ArticleInterface list works!</h3>
   <div class="sidenav-content">
     <button type="button" mat-button (click)="drawer.toggle()">
       Make icon for toggle
