--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,11 +3,11 @@
     <button mat-icon-button mat-raised-button [matMenuTriggerFor]="menu" class="toolbar-icon">
       <mat-icon>menu</mat-icon>
       <mat-menu class="toolbar-menu" #menu="matMenu">
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/article-details">Article Details</button>
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-article-list">Article list</button>
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-datetime-picker">Datetime picker</button>
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-filter-tree">Filter Tree</button>
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-search">Search</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page1">ArticleInterface Details</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page2">ArticleInterface list</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page3">Datetime picker</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page4">Filter Tree</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page5">Search</button>
       </mat-menu>
     </button>
     <span class="toolbar-spacer"></span>
