making mock article and articles with service

--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,18 +1,39 @@
+<mat-list role="list" *ngFor="let article of articles">
+  <mat-list-item>{{articles}}</mat-list-item>
+</mat-list>
 
-<mat-drawer-container class="container" autosize>
-  <mat-drawer #drawer class="sidenav" mode="side">
-    <p>make tab 'Articles:'</p>
-    <p>Make toolbar 'DateSort' and 'MediaSort'</p>
-    <p>left 'Check all | none '    right 'Selected articles: #' 'Clear'</p>
-    <mat-card>
-      <mat-card-title>Card Title</mat-card-title>
-    </mat-card>
 
-  </mat-drawer>
-  <h3>ArticleInterface list works!</h3>
-  <div class="sidenav-content">
-    <button type="button" mat-button (click)="drawer.toggle()">
-      Make icon for toggle
-    </button>
-  </div>
-</mat-drawer-container>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<mat-drawer-container class="container" autosize>-->
+<!--  <mat-drawer #drawer class="sidenav" mode="side">-->
+<!--    <p>make tab 'Articles:'</p>-->
+<!--    <p>Make toolbar 'DateSort' and 'MediaSort'</p>-->
+<!--    <p>left 'Check all | none '    right 'Selected articles: #' 'Clear'</p>-->
+<!--    <mat-card>-->
+<!--      <mat-card-title>Card Title</mat-card-title>-->
+<!--    </mat-card>-->
+
+<!--  </mat-drawer>-->
+<!--  <h3>ArticleInterface list works!</h3>-->
+<!--  <div class="sidenav-content">-->
+<!--    <button type="button" mat-button (click)="drawer.toggle()">-->
+<!--      Make icon for toggle-->
+<!--    </button>-->
+<!--  </div>-->
+<!--</mat-drawer-container>-->
