--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,8 +3,8 @@
     <button mat-icon-button mat-raised-button [matMenuTriggerFor]="menu" class="toolbar-icon">
       <mat-icon>menu</mat-icon>
       <mat-menu class="toolbar-menu" #menu="matMenu">
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page1">ArticleInterface Details</button>
-        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page2">ArticleInterface list</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page1">Article Details</button>
+        <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page2">Article list</button>
         <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page3">Datetime picker</button>
         <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page4">Filter Tree</button>
         <button class="toolbar-menu-button" mat-menu-item routerLink="/app-page5">Search</button>
