--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,6 +1,17 @@
-<mat-list role="list" *ngFor="let article of articles">
-  <mat-list-item>{{articles}}</mat-list-item>
-</mat-list>
+
+<mat-card *ngFor="let article of articles">
+  <mat-card-header >
+    <mat-card-title>{{article.articleTitle}}</mat-card-title>
+    <mat-card-subtitle ><a href="{{article.articleLink}}">{{article.articleLink}}</a> </mat-card-subtitle>
+    <mat-card-subtitle >{{article.articleDate | date }}</mat-card-subtitle>
+  </mat-card-header>
+    <mat-divider></mat-divider>
+
+      <mat-card-content >{{article.articleContent}}</mat-card-content>
+
+
+</mat-card>
+
 
 
 
