--- a/src/app/components/article-list/article-list.component.css
+++ b/src/app/components/article-list/article-list.component.css
@@ -1,8 +1,6 @@
 
-span {
+.date {
   text-align: left;
-  font-weight: bold;
-  margin: 5px;
   color: #999999;
 }
 mat-card-subtitle {
@@ -12,4 +10,22 @@ mat-card-subtitle {
 a {
   text-decoration: none;
   color: deeppink;
+}
+mat-card-content {
+
+}
+
+.clicker {
+  outline:none;
+  cursor:pointer;
+}
+
+.hiddenContent{
+  display:none;
+
+  background-color:green;
+}
+
+.clicker:focus + .hiddenContent{
+  display:block;
 }
