--- a/src/app/components/article-details/article-details.component.html
+++ b/src/app/components/article-details/article-details.component.html
@@ -9,7 +9,7 @@
   <mat-list-item><span>Topics: </span>{{article.articleTopic}}</mat-list-item>
   <br />
   <mat-list-item><span>Tag: </span>{{article.articleTag}}</mat-list-item>
-  <mat-list-item><span>Date: </span>{{ "2016-01-05T09:05:05.035Z" | date : "EEE.dd.MMM.y,' Time:' H:mm"}}</mat-list-item>
+  <mat-list-item><span>Date: </span>{{ article.articleDate| date : "EEE.dd.MMM.y,' Time:' H:mm"}}</mat-list-item>
   <mat-list-item><span>Link: </span><a target="_blank" href="{{article.articleLink}}">{{article.articleLink}}</a></mat-list-item>
 </mat-list>
   </mat-expansion-panel>
