--- a/src/app/components/article-list/article-list.component.css
+++ b/src/app/components/article-list/article-list.component.css
@@ -7,7 +7,7 @@ mat-card-subtitle {
   color: black;
 }
 
-a {
+span {
   text-decoration: none;
   color: deeppink;
 }
@@ -15,5 +15,7 @@ mat-card {
   padding: 15px;
   margin: 15px;
 }
-
+mat-checkbox {
+  padding-right: 5px;
+}
 
