made some changes to article-list.component.css & article-list.component.html

--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -1,1 +1,30 @@
-<p>datetime-picker works!</p>
+<mat-card>
+  <mat-card-content>Date Filter
+    <span class="spacer"></span>
+    <button>
+      <mat-icon>arrow_upward</mat-icon>
+    </button>
+  </mat-card-content>
+  <mat-card-header>
+    <button class="dateFilterHeaderButtons">
+      <mat-icon>navigate_before</mat-icon>
+    </button>
+    <button class="dateFilterHeaderButtons">ggg</button>
+    <button class="dateFilterHeaderButtons">
+      <mat-icon>keyboard_arrow_right</mat-icon>
+    </button>
+  </mat-card-header>
+  <br />
+  <mat-card-content>
+    <span class="spacer">select:</span>
+    <mat-button-toggle ></mat-button-toggle>
+    <span class="spacer">range:</span>
+    <mat-button-toggle ></mat-button-toggle>
+  </mat-card-content>
+    <mat-card-content>
+      <div>today</div>
+      <div>yesterday</div>
+      <div>last week</div>
+      <div>last month</div>
+    </mat-card-content>
+</mat-card>
