--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -13,30 +13,37 @@
     <button class="dateFilterHeaderButtons">
       <mat-icon>navigate_before</mat-icon>
     </button>
-        <button class="dateFilterHeaderButtons">{{todayISOString}}</button>
+        <button class="dateFilterHeaderButtons" *ngFor="let e of events">{{e | date}}</button>
         <button class="dateFilterHeaderButtons">
           <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
       </mat-list-item>
 <mat-list-item>
     <span>select:</span>
-  <mat-form-field>
-    <input  matInput [matDatepicker]="picker">
+  <mat-form-field hidden>
+    <input matInput [matDatepicker]="picker" disabled hidden
+            (dateChange)="addEvent( $event)">
     <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+    <mat-datepicker #picker disabled="false"></mat-datepicker>
   </mat-form-field>
   <span class="spacer"></span>
     <span>range:</span>
   <button>|<->|</button>
-</mat-list-item>
+ </mat-list-item>
       <mat-list-item>today</mat-list-item>
       <mat-list-item>yesterday</mat-list-item>
       <mat-list-item>last week</mat-list-item>
       <mat-list-item>last month</mat-list-item>
     </mat-list>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker3" placeholder="Value binding" [value]="date.value">
+      <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+      <mat-datepicker #picker3></mat-datepicker>
+    </mat-form-field>
   </mat-card-content>
-</mat-card>
-<mat-calendar>
-  <mat-calendar-header >fsdgfsd</mat-calendar-header>
 
-</mat-calendar>
+</mat-card>
+
+<!--<mat-calendar>-->
+<!--  <mat-calendar-header ></mat-calendar-header>-->
+<!--</mat-calendar>-->
