--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+
   <mat-card-header>
     <mat-card-title>Date Filter</mat-card-title>
     <span class="spacer"></span>
@@ -9,40 +10,52 @@
 
   <mat-card-content *ngIf="collapsed">
     <mat-list>
-      <mat-list-item>
-    <button class="dateFilterHeaderButtons">
-      <mat-icon>navigate_before</mat-icon>
-    </button>
-        <button class="dateFilterHeaderButtons" *ngFor="let e of events">{{e | date}}</button>
+      <mat-list-item >
+
+<!--                                                                  TODO      add function -1 day to arrow-->
+        <button class="dateFilterHeaderButtons">
+          <mat-icon>navigate_before</mat-icon>
+        </button>
+        <button class="dateFilterHeaderButtons" >{{pickerChange | date}}</button>
+<!--                                                                  TODO      add function +1 day to arrow-->
         <button class="dateFilterHeaderButtons">
           <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
       </mat-list-item>
-<mat-list-item>
-    <span>select:</span>
-  <mat-form-field hidden>
-    <input matInput [matDatepicker]="picker" disabled hidden
-            (dateChange)="addEvent( $event)">
-    <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
-    <mat-datepicker #picker disabled="false"></mat-datepicker>
-  </mat-form-field>
-  <span class="spacer"></span>
-    <span>range:</span>
-  <button>|<->|</button>
- </mat-list-item>
+
+      <mat-list-item>
+        <mat-form-field class="short200" >
+          <mat-label>Select:</mat-label>
+          <input matInput [matDatepicker]="picker" readonly
+            (dateChange)="addPickerEvent( $event)">
+           <mat-datepicker-toggle  matSuffix [for]="picker" >
+<!--      <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>-->
+          </mat-datepicker-toggle>
+          <mat-datepicker #picker disabled="false"></mat-datepicker>
+        </mat-form-field>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-form-field class="short200" >
+          <mat-label>Range: </mat-label>
+          <mat-date-range-input [rangePicker]="picker2">
+            <input matStartDate placeholder="Start date" readonly>
+            <input matEndDate placeholder="End date" readonly>
+          </mat-date-range-input>
+          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+          <mat-date-range-picker #picker2></mat-date-range-picker>
+        </mat-form-field>
+      </mat-list-item>
+
       <mat-list-item>today</mat-list-item>
       <mat-list-item>yesterday</mat-list-item>
       <mat-list-item>last week</mat-list-item>
       <mat-list-item>last month</mat-list-item>
     </mat-list>
-    <mat-form-field>
-      <input matInput [matDatepicker]="picker3" placeholder="Value binding" [value]="date.value">
-      <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-      <mat-datepicker #picker3></mat-datepicker>
-    </mat-form-field>
   </mat-card-content>
 
 </mat-card>
+
 
 <!--<mat-calendar>-->
 <!--  <mat-calendar-header ></mat-calendar-header>-->
