--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,7 +1,7 @@
 
 <mat-card  *ngFor="let article of articles">
   <mat-card-header >
-    <mat-card-subtitle><mat-checkbox></mat-checkbox>{{article.articleTitle}}</mat-card-subtitle>
+    <mat-card-subtitle><mat-checkbox color="primary"></mat-checkbox>{{article.articleTitle}}</mat-card-subtitle>
     <mat-card-subtitle><span>{{article.articleMedia}}</span></mat-card-subtitle>
     <mat-card-subtitle class="date">{{article.articleDate | date : 'EEE.dd.MMM.y' }}</mat-card-subtitle>
   </mat-card-header>
