--- a/src/app/components/filters/datetime-picker/datetime-picker.component.css
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.css
@@ -1,4 +1,5 @@
 mat-card{
+  border-radius: 5px;
   width: 220px;
 }
 .spacer {
@@ -10,16 +11,9 @@ mat-card-content {
   padding: 0;
   width: 220px;
   line-height: 1.9em;
-
 }
-.dateFilterHeaderButtons{
 
-  font-size: 12px;
-  margin: 0;
-  padding: 0;
-  width: 210px;
-  height: 35px;
-}
+
 .short200 {
   font-size: 12px;
   height: 35px;
@@ -27,3 +21,21 @@ mat-card-content {
   text-decoration: none;
   font-size: medium;
 }
+.dateFilterFirstBanner {
+  height: 25px;
+  width: 218px !important;
+  line-height: 0.9em;
+  font-size: 12px;
+  border: 1px solid black;
+  border-radius: 5px;
+  flex: 1 1 auto;
+}
+i {
+ flex: 1 1 auto;
+  height: 35px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+ i:hover {
+  background-color: #999999;
+ }
