--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -1,11 +1,12 @@
 <mat-card>
 
   <mat-card-header>
-    <mat-card-title>Date Filter</mat-card-title>
+    <mat-card-title class="spacer">Date Filter</mat-card-title>
     <span class="spacer"></span>
     <button class="dataFilterCollapse"(click)="toggleCollapsed()" >
       <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
+    <span class="spacer"></span>
   </mat-card-header>
 
   <mat-card-content *ngIf="collapsed">
