--- a/src/app/components/filters/datetime-picker/datetime-picker.component.css
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.css
@@ -1,6 +1,7 @@
 mat-card{
   border-radius: 5px;
   width: 220px;
+  font-family: glyphicons-basic-regular, sans-serif;
 }
 .spacer {
   flex: 1 1 auto;
@@ -11,25 +12,30 @@ mat-card-content {
   padding: 0;
   width: 220px;
   line-height: 1.9em;
+
 }
 
 mat-card-header {
   width: 204px;
 }
+
 input {
+  text-align: justify;
   font-size: 12px;
-  text-align: center;
-  height: 24px;
+  font-family: glyphicons-basic-regular, sans-serif;
+
 }
 
 .short200 {
   font-size: 12px;
   height: 35px;
   width: 188px;
-  text-decoration: none;
+  text-align: left;
+
 
 }
 .dateFilterFirstBanner {
+
   height: 25px;
   width: 218px !important;
   line-height: 0.9em;
@@ -50,6 +56,7 @@ button.dataFilterCollapse {
   border-radius: 5px;
   height: 24px;
   text-align: center;
+  line-height: 10px;
 }
 
  i:hover {
@@ -73,4 +80,5 @@ i.nextDay {
 
   height: 24px;
   text-align: center;
+
 }
