--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -3,9 +3,11 @@
   <mat-card-header>
     <mat-card-title class="spacer">Date Filter</mat-card-title>
     <span class="spacer"></span>
-    <button class="dataFilterCollapse"(click)="toggleCollapsed()" >
+
+    <button mat-raised-button mat-icon-button class="dataFilterCollapse" (click)="toggleCollapsed()" >
       <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
+
 
   </mat-card-header>
 
@@ -47,7 +49,7 @@
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-date-range-picker #picker2></mat-date-range-picker>
         </mat-form-field>
-      </mat-list-item>
+      </mat-list-item >
 
       <mat-list-item>today</mat-list-item>
       <mat-list-item>yesterday</mat-list-item>
