--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -1,8 +1,20 @@
 mat-radio-group {
+  width: 220px;
   display: flex;
-  flex-direction: row;
-  margin: 30px 0;
+  margin: 20px 0;
 }
+
 mat-radio-button{
-  margin: 25px;
+  margin: 5px;
+
+}
+
+mat-card {
+  margin: 0;
+  padding: 0;
+
+  width: 252px;
+}
+mat-card-content {
+  width: 220px;
 }
