making date picker card

--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -67,3 +67,6 @@
 
 </mat-card>
 
+<div *ngFor="let p of picker2Change">with ngFor: {{p}}</div>
+<div>from: {{fromDate}}</div>
+<div>to: {{toDate}}</div>
