making date picker card

--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -69,7 +69,9 @@
 
 </mat-card>
 
-<div>Date data:</div>
-<div *ngFor="let p of picker2Change">with ngFor: {{p}}</div>
-<div>from: {{fromDate}}</div>
-<div>to: {{toDate}}</div>
+<!--<div>Date data:</div>-->
+<!--<div *ngFor="let p of picker2Change">with ngFor: {{p}}</div>-->
+<!--<br />-->
+<!--<div>Without ngFor</div>-->
+<!--<div>from: {{fromDate}}</div>-->
+<!--<div>to: {{toDate}}</div>-->
