--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -19,7 +19,7 @@
           <i class="prevDay" (click)="dateFilter_prevDay()">
             <mat-icon>navigate_before</mat-icon>
           </i>
-          <i>{{pickerChange | date}}</i>
+          <i>{{dateDayPickerData | date}}</i>
 
   <!--                                                    TODO      add function +1 day to arrow-->
           <i class="nextDay" (click)="dateFilter_nextDay()">
@@ -30,8 +30,8 @@
       <mat-list-item>
         <mat-form-field appearance="fill" class="short200" >
           <mat-label>Select:</mat-label>
-          <input matInput [matDatepicker]="picker" readonly
-            (dateChange)="addPickerEvent( $event)">
+          <input matInput [(ngModel)]="selectedDay" name="selectedDay" [matDatepicker]="picker" readonly
+            (dateChange)="displayChange()">
            <mat-datepicker-toggle  matSuffix [for]="picker" >
           </mat-datepicker-toggle>
           <mat-datepicker #picker disabled="false"></mat-datepicker>
@@ -44,10 +44,14 @@
           <mat-label>Range: </mat-label>
           <mat-date-range-input [rangePicker]="dateRangePicker" >
             <input matStartDate
+                   [(ngModel)]="startDate"
+                   name="startDate"
                    placeholder="Start date"
                    #dateRangeStart
                    readonly>
             <input matEndDate
+                   [(ngModel)]="endDate"
+                   name="endDate"
                    placeholder="End date"
                    #dateRangeEnd
                    (dateChange)="dateRangeChange(dateRangeStart, dateRangeEnd)"
@@ -69,9 +73,11 @@
 
 </mat-card>
 
-<!--<div>Date data:</div>-->
-<!--<div *ngFor="let p of picker2Change">with ngFor: {{p}}</div>-->
-<!--<br />-->
-<!--<div>Without ngFor</div>-->
-<!--<div>from: {{fromDate}}</div>-->
-<!--<div>to: {{toDate}}</div>-->
+<div>{{dateDayPickerData}}</div>
+<br />
+<div>Range with ngFor:</div>
+<div *ngFor="let rangeData of dateRangePickerDataArr">{{rangeData}}
+<br />
+</div><div>Range no ngFor:</div>
+<div>{{dateRangePickerDataStart}}</div>
+<div>{{dateRangePickerDataEnd}}</div>
