making date picker card

--- a/src/app/components/filters/datetime-picker/datetime-picker.component.css
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.css
@@ -81,10 +81,25 @@ i.nextDay {
 
   height: 24px;
   text-align: center;
-
 }
 
 mat-list-item {
   font-size: 12px;
+}
 
+li,ul {
+  list-style-type: none;
+  margin: 0 8px;
+  padding: 0;
+}
+
+span.iDateFilter {
+  alignment: right ;
+}
+
+.floatleft {
+  float:left;
+}
+.floatright {
+  float:right;
 }
