--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card xmlns="http://www.w3.org/1999/html">
 
   <mat-card-header>
     <mat-card-title class="spacer">Date Filter</mat-card-title>
@@ -13,45 +13,46 @@
 
   <mat-card-content *ngIf="collapsed">
     <mat-list>
-      <mat-list-item>
-  <!--                                                    TODO      add function -1 day to arrow-->
 
+      <mat-list-item>
+<!-- day decrement -1-->
           <i class="prevDay" (click)="dateFilter_prevDay()">
             <mat-icon>navigate_before</mat-icon>
           </i>
-          <i>{{dateDayPickerData | date}}</i>
-
-  <!--                                                    TODO      add function +1 day to arrow-->
+<!-- display chosen date-->
+          <i>{{ dateDayPickerData | date}}</i>
+<!-- day increment +1-->
           <i class="nextDay" (click)="dateFilter_nextDay()">
             <mat-icon>keyboard_arrow_right</mat-icon>
           </i>
       </mat-list-item>
 
+<!-- Date Picker-->
       <mat-list-item>
         <mat-form-field appearance="fill" class="short200" >
           <mat-label>Select:</mat-label>
+<!-- USING ngModel for data binding-->
           <input matInput [(ngModel)]="selectedDay" name="selectedDay" [matDatepicker]="picker" readonly
-            (dateChange)="displayChange()">
+            (dateChange)="dateChange()">
            <mat-datepicker-toggle  matSuffix [for]="picker" >
           </mat-datepicker-toggle>
           <mat-datepicker #picker disabled="false"></mat-datepicker>
         </mat-form-field>
       </mat-list-item>
-<br />
-      <mat-list-item>
 
+  <br />
+
+<!-- date Range Picker-->
+      <mat-list-item>
         <mat-form-field appearance="fill" class="short200" >
           <mat-label>Range: </mat-label>
+<!-- NOT USING ngModel because it does not show range in input field (bug?)-->
           <mat-date-range-input [rangePicker]="dateRangePicker" >
             <input matStartDate
-                   [(ngModel)]="startDate"
-                   name="startDate"
                    placeholder="Start date"
                    #dateRangeStart
                    readonly>
             <input matEndDate
-                   [(ngModel)]="endDate"
-                   name="endDate"
                    placeholder="End date"
                    #dateRangeEnd
                    (dateChange)="dateRangeChange(dateRangeStart, dateRangeEnd)"
@@ -62,16 +63,23 @@
           </mat-datepicker-toggle>
           <mat-date-range-picker #dateRangePicker></mat-date-range-picker>
         </mat-form-field>
-
       </mat-list-item >
-      <mat-list-item>today</mat-list-item>
-      <mat-list-item>yesterday</mat-list-item>
-      <mat-list-item>last week</mat-list-item>
-      <mat-list-item>last month</mat-list-item>
+
+  <br />
+<!--                                                               TODO          separate to left and right -->
+        <ul>
+          <li>today____________<span class="spacer">{{todaySearch | date}}</span></li>
+          <li>yesterday___________<span class="spacer">{{yesterdaySearch}}</span></li>
+          <li>last week____________<span class="spacer">{{lastWeekSearch}}</span></li>
+          <li>last month________<span class="spacer">{{lastMonthSearch}}</span></li>
+        </ul>
+
     </mat-list>
   </mat-card-content>
 
 </mat-card>
+
+<!--Testing-->
 
 <div>{{dateDayPickerData}}</div>
 <br />
