--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<p>Search Bar</p><span flex></span>
+
 <form class="example-form">
   <mat-form-field class="example-full-width">
     <span matPrefix> </span>
@@ -6,5 +6,7 @@
     <button matSuffix mat-button><mat-icon >search</mat-icon></button>
   </mat-form-field>
   <br/>
-  {{search}}
+
 </form>
+
+<p>From Date picker component {{pickerData | date}}</p>
