making date picker card

--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,2 +1,2 @@
 <app-datetime-picker (newItemEvent)="setBurek($event)"></app-datetime-picker>
-<span>{{myItem}}</span>
+<span>{{myItem | date}}</span>
